fix overflow bug on index.php

--- a/style7.css
+++ b/style7.css
@@ -124,6 +124,7 @@
 	transform: translateX(100%);
 	-webkit-transition: -webkit-transform 1s;
 	transition: transform 1s;
+	position: fixed;
 }
 
 /*======= Log in =======*/
